Add redux-thunk to the project

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,3 +46,14 @@
     }
   }
 }
+
+.category-p {
+  opacity: 0.5;
+  font-size: 19px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
