--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,27 @@
+@mixin inputfield {
+  padding: 10px 14px;
+  border: 1px solid #e8e8e8;
+  border-radius: 5px;
+  outline: none;
+}
+
 * {
   margin: 0;
   padding: 0;
+}
+
+#root {
+  background-color: rgb(96,96,98, 30%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5% 0;
+  min-height: 80vh;
+}
+
+.App {
+  width: 90vw;
+  background-color: #fafafa;
 }
 
 .user-icons {
@@ -15,7 +36,8 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #e8e8e8;
-  padding: 25px;
+  padding: 25px 7.5%;
+  background-color: #ffffff;
 
   div {
     display: flex;
@@ -56,4 +78,53 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  background-color: #fafafa;
+  align-items: center;
+  margin-top: 3%;
+}
+
+.book {
+  background-color: #ffffff;
+  border: 1px solid #e8e8e8;
+  width: 85%;
+  padding: 25px;
+}
+
+.input-div {
+  padding: 25px 0 35px 0;
+  width: 88%;
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+
+  h2 {
+    opacity: 0.5;
+  }
+
+  form {
+    display: flex;
+    justify-content: space-between;
+
+    :first-child {
+      @include inputfield();
+      width: 50%;
+    }
+
+    :nth-child(2) {
+      width: 20%;
+      @include inputfield();
+    }
+
+    button {
+      background-color: #0290ff;
+      color: #ffffff;
+      padding: 15px 50px;
+      border: none;
+      border-radius: 3px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
