--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
 }
 
 #root {
-  background-color: rgb(96,96,98, 30%);
+  background-color: rgb(96, 96, 98, 30%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,7 @@
   justify-content: space-between;
   border-bottom: 1px solid #e8e8e8;
   padding: 25px 7.5%;
-  background-color: #ffffff;
+  background-color: #fff;
 
   div {
     display: flex;
@@ -70,8 +70,11 @@
 }
 
 .category-p {
-  opacity: 0.5;
+  opacity: 0.4;
   font-size: 19px;
+  font-family: 'Montserrat', serif;
+  font-weight: 700;
+  padding-bottom: 5px;
 }
 
 .main {
@@ -84,10 +87,12 @@
 }
 
 .book {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #e8e8e8;
   width: 85%;
   padding: 25px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .input-div {
@@ -107,17 +112,19 @@
 
     :first-child {
       @include inputfield();
+
       width: 50%;
     }
 
     :nth-child(2) {
       width: 20%;
+
       @include inputfield();
     }
 
     button {
       background-color: #0290ff;
-      color: #ffffff;
+      color: #fff;
       padding: 15px 50px;
       border: none;
       border-radius: 3px;
@@ -127,4 +134,95 @@
       }
     }
   }
+}
+
+.comments {
+  border: none;
+  color: #659ccb;
+  background-color: #fff;
+  padding: 25px 15px 15px 0;
+}
+
+.edit {
+  padding: 25px 15px 15px 15px;
+  border: none;
+  color: #659ccb;
+  background-color: #fff;
+}
+
+.remove {
+  border-right: 1px solid #e8e8e8;
+  border-left: 1px solid #e8e8e8;
+  border-top: none;
+  border-bottom: none;
+  color: #659ccb;
+  background-color: #fff;
+  padding: 0 15px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.author {
+  color: #4587c0;
+  padding-top: 4px;
+}
+
+.category-div {
+  padding: 20px;
+
+  button {
+    border: 1px solid #e8e8e8;
+    padding: 7px 14px;
+    font-family: 'Montserrat', serif;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #e6e6e6;
+    }
+  }
+}
+
+#construction-text {
+  padding-bottom: 14px;
+  font-size: 19px;
+  font-family: 'Montserrat', serif;
+}
+
+.update-progress-btn {
+  border-radius: 3px;
+  background-color: #0290ff;
+  color: #fff;
+  padding: 15px 50px;
+  border: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.chapter-div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-right: 50px;
+
+  :first-child {
+    font-family: 'Montserrat', serif;
+    opacity: 0.4;
+  }
+
+  :nth-child(2) {
+    font-family: 'Montserrat', serif;
+    font-size: 18px;
+  }
+}
+
+.update-progress-btn-completed {
+  border-radius: 3px;
+  background-color: #3ac47d;
+  color: #fff;
+  padding: 15px 50px;
+  border: none;
 }
