Add completed and percentage with line

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,17 +10,7 @@
   padding: 0;
 }
 
-#root {
-  background-color: rgb(96, 96, 98, 30%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5% 0;
-  min-height: 80vh;
-}
-
 .App {
-  width: 90vw;
   background-color: #fafafa;
 }
 
@@ -225,4 +215,40 @@
   color: #fff;
   padding: 15px 50px;
   border: none;
+}
+
+#right {
+  display: flex;
+  gap: 55px;
+}
+
+.percentage {
+  display: flex;
+  gap: 14px;
+
+  &::after {
+    content: '';
+    display: block;
+    height: 90px;
+    width: 1px;
+    background-color: #e8e8e8;
+    margin: 23px 0 0 25px;
+  }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 15px;
+
+    .percent {
+      font-size: 32px;
+    }
+
+    #completed {
+      font-family: 'Montserrat', serif;
+      font-size: 16px;
+      opacity: 0.6;
+    }
+  }
 }
